--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyascii==0.3.3
 asgiref==3.10.0
 beautifulsoup4==4.14.2
+bleach==6.2.0
 certifi==2025.10.5
 charset-normalizer==3.4.3
 crispy-bootstrap5==2025.6
@@ -38,6 +39,6 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 wagtail==7.1.1
+webencodings==0.5.1
 whitenoise==6.11.0
 Willow==1.11.0
-bleach==6.2.0
