--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ djangorestframework==3.16.1
 draftjs_exporter==5.1.0
 et_xmlfile==2.0.0
 filetype==1.2.0
+freezegun==1.5.1
 gunicorn==23.0.0
 idna==3.10
 laces==0.1.2
@@ -28,10 +29,12 @@ packaging==25.0
 pillow==11.3.0
 pillow_heif==1.1.1
 psycopg2-binary==2.9.11
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.1.1
 requests==2.32.5
 setuptools==80.9.0
+six==1.17.0
 soupsieve==2.8
 sqlparse==0.5.3
 telepath==0.3.1
